--- a/Ecommerce01/style.css
+++ b/Ecommerce01/style.css
@@ -8,6 +8,10 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
+ul {
+    list-style-type: none;
+}
+
 .navbar {
     display: flex;
     align-items: center;
@@ -231,4 +235,108 @@ small {
 
 .five-cols img:hover {
     filter: grayscale(0);
+}
+
+footer {
+    background-color: #000;
+    color: #8a8a8a;
+    font-size: 14px;
+    padding: 60px 0 20px;
+}
+
+footer p {
+    color: #8a8a8a;
+}
+
+footer h3 {
+    color: white;
+    margin-bottom: 20px;
+}
+
+.footer-cols {
+    min-width: 250px;
+    margin-bottom: 20px;
+}
+
+.footer-col-1 {
+    flex-basis: 30%;
+}
+
+.footer-col-2 {
+    flex: 1;
+    text-align: center;
+}
+
+.footer-col-2 img {
+    width: 180px;
+    margin-bottom: 20px;
+}
+
+.footer-col-3, .footer-col-4 {
+    flex-basis: 12%;
+    text-align: center;
+}
+
+.app-logo {
+    margin-top: 20px;
+}
+
+.app-logo img {
+    width: 140px;
+}
+
+footer hr {
+    border: none;
+    background-color: #b5b5b5;
+    height: 1px;
+    margin: 20px 0;
+}
+
+.copyright {
+    text-align: center;
+}
+
+.menu-icon {
+    width: 28px;
+    margin-left: 20px;
+    display: none;
+}
+
+@media only screen and (max-width: 800px) {
+    nav ul {
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background-color: #333;
+        width: 100%;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 10px 50px 10px 0;
+    }
+
+    nav ul li a {
+        color: white;
+    }
+
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .row {
+        text-align: center;
+    }
+
+    .two-cols, .three-cols, .four-cols {
+        flex-basis: 100%;
+    }
+
+    
+
 }
